--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@charset "UTF-8";
+/* CSS Document */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +14,145 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --background_dark: #000000;
+  --background_light: #0c1821;
+  --background_middle: #081118;
+  --link: #4571B4;
+  --link-active: #99b5e0;
+  --link-hover: #68A0D2;
+  --text: #ccc9dc;
+  --text-light: #757578;
+}
+
+body {
+  background-color: var(--background_dark);
+  color: var(--text);
+  font-size: 1.2em;
+}
+
+html {
+  overflow-y: scroll;
+}
+
+html {
+  font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+}
+
+h1 {
+  text-align: center;
+  color: var(--background_dark);
+  text-shadow: var(--text) 0px 0px 10px;
+  font: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif"
+}
+
+.section h2 {
+  padding-left: 2vw;
+  padding-bottom: 0.5vw;
+}
+
+a {
+  color: var(--link);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--link-hover);
+}
+a:active {
+  color: var(--link-active);
+}
+
+.banner {
+  background-color: var(--background_dark);
+  width: auto;
+  min-height: 6em;
+  padding: 3em 1em;
+}
+
+.section {
+  padding: 10px 1em 1em;
+}
+
+@media screen and (min-width : 830px) {
+  .section {
+    padding: 1em 7em;
+  }
+}
+
+.talk-date {
+  color: var(--link);
+  padding-right: 1em;
+}
+
+
+.section:nth-child(even) {
+  background-color: var(--background_dark);
+}
+
+.section:nth-child(odd) {
+  background-color: var(--background_light);
+}
+
+.banner {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url(./imgs/galaxy_banner.png);
+  background-size: 100%;
+  background-position: -10px;
+}
+
+.list {
+  width: 100%;
+}
+
+.list .element {
+  width: 100%;
+}
+
+.list .element {
+  width: 100%;
+  margin-bottom: 4em;
+}
+
+.list .element:last-child {
+  margin-bottom: auto;
+}
+
+.list .element .header .date {
+  display: inline-block;
+  text-align: right;
+  width: 10%;
+}
+
+.list .element .header .title {
+  display: inline-block;
+  width: 45%;
+  color: var(--link-hover)
+}
+
+.list .element .header .location {
+  display: inline-block;
+  width: 45%;
+}
+
+.list .element .abstract {
+  text-align: justify;
+  width: 100%;
+}
+
+.btn {
+  border: 1px solid var(--text-light);
+  border-radius: 5px;
+  padding: 5px 5px;
+  margin: auto 5px;
+  background-color: var(--text);
+  color: var(--background_dark);
+  cursor:pointer;
+}
+
+.btn:hover {
+  color: var(--text);
+  background-color: var(--text-light);
+}
+
+
