--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,9 @@ html {
 }
 
 h1 {
-  text-align: center;
-  color: var(--background_dark);
-  text-shadow: var(--text) 0px 0px 10px;
+  text-align: left;
+  color: var(--text);
+  margin-left: 1em;
   font: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif"
 }
 
@@ -65,10 +65,10 @@ a:active {
 }
 
 .banner {
-  background-color: var(--background_dark);
+  background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,0.8)), var(--link);
   width: auto;
-  min-height: 6em;
-  padding: 3em 1em;
+  min-height: 1em;
+  padding: 0.5em 0.5em;
 }
 
 .section {
@@ -93,12 +93,6 @@ a:active {
 
 .section:nth-child(odd) {
   background-color: var(--background_light);
-}
-
-.banner {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url(./imgs/galaxy_banner.png);
-  background-size: 100%;
-  background-position: -10px;
 }
 
 .list {
@@ -144,7 +138,7 @@ a:active {
   border: 1px solid var(--text-light);
   border-radius: 5px;
   padding: 5px 5px;
-  margin: auto 5px;
+  margin: auto 0;
   background-color: var(--text);
   color: var(--background_dark);
   cursor:pointer;
